Updated class option index.html

--- a/web_version/index.html
+++ b/web_version/index.html
@@ -29,7 +29,7 @@
                 <option>Canteen</option>
                 <option>Faculty</option>
                 <option>Library</option>
-                 <option>class >coption>
+                 <option>Class ></option>
                 <option>All of Above</option>
                 <option>Other</option>
             </select>
